--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.8",
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "axios": "^0.19.2",
+    "enzyme": "^3.11.0",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "prettier": "^2.0.5",
@@ -22,9 +25,11 @@
     "react-hook-form": "^6.3.0",
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
     "weather-icons": "^1.3.2"
