--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
+    "@types/uuid": "^8.0.1",
     "axios": "^0.19.2",
+    "axios-cache-adapter": "^2.5.0",
     "enzyme": "^3.11.0",
+    "i18next": "^19.6.3",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.0",
+    "react-i18next": "^11.7.0",
     "react-moment": "^0.9.7",
     "react-number-format": "^4.4.1",
     "react-redux": "^7.2.1",
@@ -32,6 +36,7 @@
     "redux": "^4.0.5",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7",
+    "uuid": "^8.3.0",
     "weather-icons": "^1.3.2"
   },
   "scripts": {
@@ -56,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "i18next-scanner": "^2.11.0"
   }
 }
